Fix image width and boxout width on small devices.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1836,8 +1836,6 @@ blockquote > .attribution {
 
 .factbox, .boxout {
 	.box;
-	width: 30%;
-	margin: 0;
 }
 
 .factbox h2, .factbox h3, .factbox h4, .box h2, .box h3, .box h4 {
@@ -2301,6 +2299,10 @@ ul.ui-autocomplete {
 	}
 
 	.article-image-centre img {
+		max-width: 100%;
+	}
+
+	.all-article-images img {
 		max-width: 100%;
 	}
 	
